correction dans le html et css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <div class="home">
-        <img src="images/MI.jpg" class="img-fluid" alt="maintenancier">
+        <img src="images/MI.jpg" class="mi img-fluid" alt="maintenancier">
     </div>
 
     <div class=" technique container-fluid">
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="border-light bg-primary m-3" style="width: 300px;">
-                    <img src="images/devices.png" class="card-img-top" style="height: 135px;" alt="devices">
+                    <img src="images/devices.png" class="devices card-img-top" style=" width: 158px; ;height: 177px;" alt="devices">
                     <div>
                         <h5 class="text-light text-center">Conseils</h5>
                     </div>
