correction de la largeur et de la hauteur des images

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="border-light bg-primary m-3" style="width: 300px;">
-                    <img src="images/parc_informatique.png" class="card-img-top" alt="parc_informatique">
+                    <img src="images/parc_informatique.png" class="card-img-top"  alt="parc_informatique">
                     <div>
                         <h5 class="text-light text-center">Gestion des Parc Informatiques</h5>
                     </div>
@@ -367,19 +367,19 @@
                     <div class="tous_reseaux d-flex m-3 gap-3">
                         <div class="reseau3">
                             <div>
-                                <img src="images/facebook_icone.png" alt="facebook" height="45">
+                                <img src="images/facebook_icone.png" alt="facebook" width="32" height="28">
                             </div>
                             <p>suivez nous sur <br> facebook</p>
                         </div>
                         <div class="reseau3">
                             <div>
-                                <img src="images/twitter_bird.png" alt="Twitter" height="50">
+                                <img src="images/twitter_bird.png" alt="Twitter" width="70" height="57">
                             </div>
                             <p>suivez nous sur <br> twitter</p>
                         </div>
                         <div class="reseau3">
                             <div>
-                                <img src="images/Linkedin-icone.png" alt="Linkedin" height="32">
+                                <img src="images/Linkedin-icone.png" alt="Linkedin" width="117" height="29">
                             </div>
                             <p>suivez nous sur <br> Linkedin</p>
                         </div>
@@ -397,7 +397,7 @@
                     </div>
                     <div class="bottom_contact d-flex">
                         <div>
-                            <img src="images/message.png" alt="message">
+                            <img src="images/message.png" width="47" height="47" alt="message">
                         </div>
                         <div>
                             <p>sewendatchaou@gmail.com</p>
@@ -405,7 +405,7 @@
                     </div>
                     <div class="bottom_contact d-flex">
                         <div>
-                            <img src="images/whatsapp.png" alt="whatsapp">
+                            <img src="images/whatsapp.png" width="60" height="51" alt="whatsapp">
                         </div>
                         <div>
                             <p>00228 91 62 24 97</p>
@@ -413,7 +413,7 @@
                     </div>
                     <div class="bottom_contact d-flex">
                         <div>
-                            <img src="images/télephone.png" alt="◊">
+                            <img src="images/télephone.png" width="38" height="46" alt="télephone">
                         </div>
                         <div>
                             <p>00228 91 62 24 97</p>
